# CMakeTemplate

./: .gitignore  CMakeLists.txt  LEEME.txt  LICENCIA  LICENCIA.txt
config/: cmaketemplate.cmake  deps.cmake  install.cmake  install_conf.cmake
config/include_dirs/: gui
debian/: README.Debian  README.source  changelog  control  copyright
include/: About.hpp  Export.hpp
includes/: About.hpp  Types.hpp
modules/: CMakeLists.txt
modules/demos/: CMakeLists.txt  demos_mod.cmake
modules/demos/include/: DemoExport.hpp  DemoWindow.hpp  Export.hpp  Window.hpp
modules/demos/src/: DemoWindow.cpp  Window.cpp  demo.cpp  main.cpp
modules/gui/: CMakeLists.txt  gui_mod.cmake
modules/gui/include/: About.hpp  Export.hpp  GUIAbout.hpp  GUIQtWin.hpp  GUIWindowNotifier.hpp  QtWin.hpp  Types.hpp  WindowNotifier.hpp
modules/gui/src/: About.cpp  GUIAbout.cpp  GUIQtWin.cpp  QtWin.cpp
package/: gdbase_0.1-1.dsc  gdbase_0.1-1_amd64.changes  gdbase_0.1-1_amd64.deb
resources/: icon.rc  icons.qrc
src/: About.cpp
test/: about.cpp
uis/: About.ui
